charts/vanilla/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubernetes-challenge
  labels:
    app: kubernetes-challenge
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 30
  template:
    metadata:
      labels:
        app: kubernetes-challenge
    spec:
      containers:
      - name: kubernetes-challenge
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 100m
            memory: 128Mi
        readinessProbe:
          httpGet:
            path: /
            port: 3000
            httpHeaders:
              - name: User-Agent
                value: kubernetes-readiness-probe
          initialDelaySeconds: 5
          periodSeconds: 5
        image: kubernetes-challenge:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
