charts/vanilla/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-challenge
  labels:
    app: kubernetes-challenge
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    name: kubernetes-challenge
  selector:
    app: kubernetes-challenge
