charts/vanilla/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-challenge
spec:
  backend:
    serviceName: kubernetes-challenge
    servicePort: 3000
